# Hugr_Primus

./: .gitignore  README.md  STRUCTURE.md  check_dependencies.py  init_structure.sh
.docker/ros2-humble/: DockerFile
.github/workflows/: build-docker.yml  colcon_build_everything.yml
control/: package.xml  setup.py
control/asv_control/: asv_master_node.py
control/launch/: asv_launch.py
control_station/: README.md
docs/: README.md
hardware_interfaces/camera_system/: README.md
hardware_interfaces/imu_unit/: README.md
hardware_interfaces/microcontroller/l4r5zi_microros/: .mxproject  Makefile  STM32L4R5XX_FLASH.ld  l4r5zi_microros.ioc
hardware_interfaces/modem_interface/: README.md
hardware_interfaces/positioning/: README.md
hardware_interfaces/power_management/: README.md
hardware_interfaces/propulsion_control/: README.md
hugr_fake_status/: setup.py
hugr_rviz_panel/: CMakeLists.txt  plugin_description.xml
hugr_rviz_panel/include/hugr_rviz_panel/: hugr_gyro_display.hpp
hugr_rviz_panel/src/: hugr_status_panel.cpp
manual_control/sendSignalToMotorViaRos/motorcontroller/: CMakeLists.txt  stm32l4r5zitx_FLASH.ld
navigation/: README.md
seabotics_ws/: .gitignore  frames_2026-03-06_18.42.19.gv
seabotics_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
seabotics_ws/install/share/hugr_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
seabotics_ws/install/share/hugr_sim/cmake/: hugr_simConfig.cmake
seabotics_ws/log/: latest_build
seabotics_ws/src/arduino_primus/: arduino_primus.ino
seabotics_ws/src/asv_navigation/: CMakeLists.txt  package.xml
seabotics_ws/src/autopilot/: CMakeLists.txt  package.xml
seabotics_ws/src/autopilot/include/autopilot/: autopilot_node.hpp
seabotics_ws/src/autopilot/src/: autopilot_node.cpp  main.cpp
seabotics_ws/src/battery_monitoring/: package.xml  setup.cfg  setup.py
seabotics_ws/src/control_primus/: package.xml  setup.cfg  setup.py
seabotics_ws/src/external_drivers/: README.md
seabotics_ws/src/gui/hugr_rviz_panel/: CMakeLists.txt  package.xml  plugin_description.xml
seabotics_ws/src/gui/hugr_rviz_panel/include/hugr_rviz_panel/: hugr_camera_subscriber_panel.hpp  hugr_compass_panel.hpp  hugr_gyro_display.hpp  hugr_leak_panel.hpp  hugr_mode_panel.hpp  hugr_status_panel.hpp  hugr_status_panel.hpp.bak  hugr_status_panel.hpp.bak_a  hugr_status_panel.hpp.bak_accel
seabotics_ws/src/gui/hugr_rviz_panel/src/: hugr_camera_subscriber_panel.cpp  hugr_compass_panel.cpp  hugr_gyro_display.cpp  hugr_leak_panel.cpp  hugr_leak_panel_plugin.cpp  hugr_mode_panel.cpp  hugr_pid_panel.cpp  hugr_status_panel.cpp  hugr_status_panel.cpp.bak  hugr_status_panel.cpp.bak2  hugr_status_panel.cpp.bak_a2  hugr_status_panel.cpp.bak_accel  hugr_status_panel.cpp.bak_accvec  hugr_status_panel.cpp.bak_fix_namespace  leak_panel_loader_test.cpp
seabotics_ws/src/guidance_primus/: CMakeLists.txt  package.xml
seabotics_ws/src/hugr_bringup/: CMakeLists.txt  README.md  package.xml
seabotics_ws/src/hugr_bringup/config/: forward_controllers.yaml
seabotics_ws/src/hugr_bringup/launch/: display.launch.py  gazebo_sim.launch.py  primus_bringup.launch.py  sim_nav2.launch.py
seabotics_ws/src/hugr_bringup/rviz/: hugr.rviz
seabotics_ws/src/hugr_bringup/scripts/: thruster_force_mux.py
seabotics_ws/src/hugr_bringup/worlds/: ocean.sdf
seabotics_ws/src/hugr_control/: CMakeLists.txt  package.xml
seabotics_ws/src/hugr_control/src/: asv_kinematics.cpp  thruster_cmd_mux.cpp
seabotics_ws/src/hugr_description/: CMakeLists.txt  README.md  package.xml
seabotics_ws/src/hugr_description/ros2_control/: hugr_ros2_control.yaml
seabotics_ws/src/hugr_description/urdf/: asv.ros2_control.xacro  asv.urdf.xacro  hugr.urdf.xacro  hugr.urdf.xarco  materials.xacro
seabotics_ws/src/hugr_description/urdf/parts/: sensors.xacro  sensors.xarco  thrusters.xacro  thrusters.xarco  trimaran_hull.xacro  trimaran_hull.xarco
seabotics_ws/src/hugr_description/urdf/urdf/Assem1.SLDASM/: CMakeCache.txt  CMakeLists.txt
seabotics_ws/src/hugr_description/urdf/urdf/Assem1.SLDASM/meshes/: base_link.STL  bridge.STL  camera_left.STL  camera_right.STL  floaters.STL  gnss.STL  surge_left.STL  surge_right.STL  sway_left.STL
seabotics_ws/src/hugr_description/urdf/urdf/Assem1.SLDASM/urdf/: Assem1.SLDASM.csv  Assem1.SLDASM.urdf
seabotics_ws/src/hugr_hardware/: CMakeLists.txt  hugr_hardware_plugin.xml  package.xml  serial_thruster_interface.xml
seabotics_ws/src/hugr_hardware/include/hugr_hardware/: serial_thruster_interface.hpp
seabotics_ws/src/hugr_hardware/src/: serial_thruster_interface.cpp  twist_to_thrust_node.cpp
seabotics_ws/src/hugr_hardware/thrusters/: README.md
seabotics_ws/src/hugr_manual_control/: CMakeLists.txt  README.md
seabotics_ws/src/hugr_mission/: CMakeLists.txt  README.md
seabotics_ws/src/navigation_primus/: CMakeLists.txt  package.xml
seabotics_ws/src/navigation_primus/config/: xsens_ekf.yaml
seabotics_ws/src/navigation_primus/launch/: navigation.launch.py
seabotics_ws/src/opencv_vendor/: CMakeLists.txt  package.xml
seabotics_ws/src/opencv_vendor/cmake/: opencv_vendor-extras.cmake
seabotics_ws/src/primus_bringup/: CMakeLists.txt  package.xml
seabotics_ws/src/primus_bringup/launch/: system_launch.py
seabotics_ws/src/primus_bringup/urdf/: primus.urdf
seabotics_ws/src/primus_bringup/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
seabotics_ws/src/trimaran_gazebo/: CMakeLists.txt  package.xml
seabotics_ws/src/trimaran_gazebo/launch/: gazebo.launch.py
seabotics_ws/src/trimaran_gazebo/worlds/: ocean.world
seabotics_ws/src/trimaran_localization/: CMakeLists.txt  package.xml
seabotics_ws/src/trimaran_localization/config/: ekf.yaml  navsat.yaml
seabotics_ws/src/trimaran_localization/launch/: trimaran_localization.launch.py
simulation/: README.md
support/communication/: README.md
support/control_station/: README.md
support/data_logging/: README.md
support/diagnostics/: README.md
support/utils/: README.md
(+159 files in other folders)
