<?xml version="1.0"?>
<package format="3">
  <name>asv_control</name>
  <version>0.1.0</version>
  <description>ASV styring for Jetson Nano og STM32</description>
  <maintainer email="bruker@todo.todo">Bruker</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>