<?xml version="1.0"?>
<package format="3">
  <name>hugr_bringup</name>
  <version>0.0.1</version>
  <description>Bringup/launch for Hugr ASV</description>
  <maintainer email="you@example.com">SeaBotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hugr_description</exec_depend>
  <exec_depend>hugr_control</exec_depend>
  <exec_depend>hugr_hardware</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
