<?xml version="1.0"?>
<package format="3">
  <name>hugr_control</name>
  <version>0.0.1</version>
  <description>Control nodes for Hugr ASV</description>
  <maintainer email="you@example.com">SeaBotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
