<?xml version="1.0"?>
<package format="3">
  <name>hugr_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro og ros2_control for Hugr ASV</description>
  <maintainer email="you@example.com">SeaBotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
