<?xml version="1.0"?>
<package format="3">
  <name>opencv_vendor</name>
  <version>4.10.0</version>
  <description>Vendor package that builds and provides OpenCV for ROS 2.</description>

  <maintainer email="carlos.mauricio.leal@outlook.com">Carlos Mauricio Andersen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
