<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>primus_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="idso.julianf@gmail.com">idsoj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>io_primus</exec_depend>
  <exec_depend>teleoperation</exec_depend>
  <exec_depend>mode_manager</exec_depend>
  <exec_depend>control_primus</exec_depend>
  <exec_depend>navigation_primus</exec_depend>
  <exec_depend>guidance_primus</exec_depend> <exec_depend>mission_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
