<?xml version="1.0"?>
<package format="3">
  <name>trimaran_localization</name>
  <version>0.1.0</version>

  <description>
    Localization configuration for the Hugr Primus ASV using robot_localization.
  </description>

  <maintainer email="isak@todo.todo">Isak</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>