<package format="3">
  <name>hugr_sim</name>
  <version>0.1.0</version>
  <description>hugr_sim package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Avhengigheter, legg til flere ved behov -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
